# almost-of-zzt

./: .gitignore  CAVES.HI  README.md  SAVED.SAV  TIMMY.ZZT  TOUR30.ZZT  TOWN30.ZZT  gaps.md  plan.md  playtest.ZZT  progress-report-1.md  progress-report-2.md  progress-report-3.md  progress-report-4.md  progress-report-5.md  pyproject.toml
.codex/environments/: environment.toml
scripts/: make_playtest_world.py
src/almost_of_zzt/: APL386-reference.html  __main__.py  constants.py  editor.py  engine.py  info.py  model.py  oop.py  render.py  sound.py  world.py
tests/: test_finish_plan.py  test_oop_runner.py  test_parity_tranche.py  test_sound_system.py  test_world_codec.py
